--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Recetas</title>
-</head>
-<body>
-
-</body>
-</html>
+<h1>en construcció</h1>
