--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+
 </head>
 <body>
+
+    <header>
+        <h1>HEADER</h1>
+    </header>
+
+    <nav>
+        <p>NAVEGACIONNNNNNNNNNN</p>
+    </nav>
+
+    <aside>
+        <p></p>
+    </aside>
     
 </body>
 </html>
