--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Delicias Kitchen 😋</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <link rel="stylesheet" href="estilo.css">
+    <!--<script src='main.js'></script>-->
 
 </head>
 <body>
-
     <header>
-        <h1>HEADER</h1>
+        <img src="imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
+
     </header>
 
-    <nav>
-        <p>NAVEGACIONNNNNNNNN</p>
-    </nav>
+    <div class="menu-container">
+  <hr>
+  <ul class="menu">
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Acerca de</a></li>
+    <li><a href="#">Servicios</a></li>
+    <li><a href="#">Contacto</a></li>
+  </ul>
+  <hr>
+</div>
 
     <aside>
         <p></p>
