--- a/index.html
+++ b/index.html
@@ -6,7 +6,41 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="stylesheet" href="estilo.css">
     <!--<script src='main.js'></script>-->
+    <style>
+        header {
+          text-align: center;
+          padding: 50px 0;
+        }
 
+        .menu-container {
+          width: 80%;
+          margin: 0 auto;
+          text-align: center;
+        }
+
+        .menu {
+          list-style: none;
+          display: flex;
+          justify-content: center;
+          margin: 0;
+          padding: 0;
+        }
+
+        .menu li {
+          margin: 0 10px;
+        }
+
+        .menu a {
+          text-decoration: none;
+          color: #333;
+        }
+
+        aside {
+          width: 20%;
+          float: right;
+          padding: 50px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -15,12 +49,12 @@
     </header>
 
     <div class="menu-container">
-  <hr>
-  <ul class="menu">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Acerca de</a></li>
-    <li><a href="#">Servicios</a></li>
-    <li><a href="#">Contacto</a></li>
+      <hr>
+      <ul class="menu">
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Acerca de</a></li>
+        <li><a href="#">Servicios</a><li>
+
   </ul>
   <hr>
 </div>
