--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <div class="menu-container">
       <hr>
       <ul class="menu">
-        <li><a href="#">Inicio</a></li>
+<li><a href="#">Inicio</a></li>
         <li><a href="#">Sobre mi</a></li>
-        <li><a href="#">Recetas</a><li>
-        <li><a href="#">Contacto
-
+        <li><a href="../receta/receta.html">Recetas</a></li>
+        <li><a href="../contacto/contacto.html">Contacto</a></li>
+        <li><a href="../listado/listado.html">Lista de receptes</a></li>
   </ul>
   <hr>
 </div>
