--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
       text-decoration: none;
       color: #333;
     }
+    .menu a:hover {
+      color: green;
+    }
 
     aside {
       width: 20%;
