--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
 
     aside {
       width: 20%;
-      float: right;
+      float: left;
       padding: 50px;
     }
+    .h2{
+       justify-content: center;
+    }
+
 </style>
 </head>
 <body>
@@ -85,9 +89,28 @@
   <hr>
 </div>
 
-    <aside>
-        <p></p>
+    <aside class="receta1">
+        <main>
+    <h1>Sobre mi</h1>
+    <p>Hola bienvenid@ a mi blog, un espacio donde </p>
+    </main>
+
+  <aside>
+    <p>Aquí podrás encontrar información adicional sobre nuestras deliciosas delicias.</p>
+  </aside>
+          <section class="recetas">
+      <h2>Delicia 1</h2>
+      <img src="imagenes/galletas.png" alt="Imagen de la primera delicia">
+      <p>Esta deliciosa delicia está hecha con los mejores ingredientes y es perfecta para compartir con amigos y familiares.</p>
+    </section>
     </aside>
+  <aside>
+      <section class="receta2">
+      <h2>Delicia 2</h2>
+      <img src="imagenes/calabacines.png" alt="Imagen de la segunda delicia">
+      <p>Esta otra delicia es perfecta para los amantes de los postres dulces. Está hecha con ingredientes frescos y naturales.</p>
+    </section>
+  </aside>
     
 </body>
 </html>
