--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilo.css">
     <!--<script src='main.js'></script>-->
     <style>
-    header {
+   header {
       text-align: center;
       padding: 50px 0;
     }
@@ -33,15 +33,11 @@
       color: green;
     }
 
-    aside.receta1 {
+    aside.sobremi {
       float: left;
       width: 20%;
-      padding: 50px;
+      padding: 10px;
     }
-    .h2{
-       justify-content: center;
-    }
-
 </style>
 </head>
 <body>
@@ -59,36 +55,33 @@
         <li><a href="../listado/listado.html">Lista de receptes</a></li>
   </ul>
         <hr/>
-
-   <aside class="receta1">
-  <main>
-    <h1>Sobre mi</h1>
-    <img src="imagenes/isagil.png" style="display:block; margin:auto;">
-    <p>Hola bienvenid@ a mi blog, un espacio donde
-    quiero compartir mis recetas vegetarianas</p>
-  </main>
-</aside>
-
-<aside style="width:100%; display:block; margin:auto;">
+    <aside class="sobremi">
+        <main>
+            <h1>Sobre mi</h1>
+            <img src="imagenes/isagil.png" style="display:block; margin:auto;">
+            <p>Hola bienvenid@ a mi blog, un espacio donde
+                quiero compartir mis recetas vegetarianas</p>
+        </main>
+    </aside>
+  <section class="recetas">
+    <h2></h2>
+    <img src="imagenes/galletas.png" alt="Imagen de la primera">
+  </section>
   <section class="recetas">
     <h2></h2>
     <img src="imagenes/galletas.png" alt="Imagen de la primera delicia" style="display:block; margin:auto;">
-    <p>Esta deliciosa delicia está hecha con los mejores ingredientes y es perfecta para compartir con amigos y familiares.</p>
+    <p></p>
   </section>
-</aside>
 
-<aside style="width:100%; display:block; margin:auto;">
-  <section class="receta2">
+  <section class="recetas">
     <h2></h2>
     <img src="imagenes/pasta.png" alt="Imagen de la segunda delicia" style="display:block; margin:auto;">
-    <p>Esta otra delicia es perfecta para los amantes de los postres dulces. Está hecha con ingredientes frescos y naturales.</p>
+    <p></p>
   </section>
-</aside>
-
-<aside style="width:100%; display:block; margin:auto;">
-  <p>Aquí podrás encontrar información adicional sobre nuestras deliciosas delicias.</p>
-</aside>
+  <section class="receta">
+    <h2></h2>
+    <img src="imagenes/barritas.png" alt="Imagen de la segunda delicia" style="display:block; margin:auto;">
+    <p></p>
+  </section>
 </body>
-
 </html>
-
