--- a/index.html
+++ b/index.html
@@ -4,41 +4,8 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <!--<script src='main.js'></script>-->
-    <style>
-   header {
-      text-align: center;
-      padding: 50px 0;
-    }
-    .menu {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      margin:0;
-      padding: 0;
-      position: relative;
-      z-index: 1;
-    }
-
-    .menu li {
-      margin: 0 10px;
-    }
-
-    .menu a {
-      text-decoration: none;
-      color: #333;
-    }
-    .menu a:hover {
-      color: green;
-    }
-
-    aside.sobremi {
-      float: left;
-      width: 20%;
-      padding: 10px;
-    }
-</style>
 </head>
 <body>
     <header>
@@ -65,7 +32,7 @@
     </aside>
   <section class="recetas">
     <h2></h2>
-    <img src="imagenes/galletas.png" alt="Imagen de la primera">
+    <img src="imagenes/mijo.png" alt="Imagen de la primera">
   </section>
   <section class="recetas">
     <h2></h2>
