--- a/index.html
+++ b/index.html
@@ -30,25 +30,27 @@
                 quiero compartir mis recetas vegetarianas</p>
         </main>
     </aside>
-  <section class="recetas">
-    <h2></h2>
-    <img src="imagenes/mijo.png" alt="Imagen de la primera">
-  </section>
-  <section class="recetas">
-    <h2></h2>
-    <img src="imagenes/galletas.png" alt="Imagen de la primera delicia" style="display:block; margin:auto;">
-    <p></p>
-  </section>
-
-  <section class="recetas">
-    <h2></h2>
-    <img src="imagenes/pasta.png" alt="Imagen de la segunda delicia" style="display:block; margin:auto;">
-    <p></p>
-  </section>
-  <section class="receta">
-    <h2></h2>
-    <img src="imagenes/barritas.png" alt="Imagen de la segunda delicia" style="display:block; margin:auto;">
-    <p></p>
-  </section>
+    <aside class="receptes">
+      <section class="recetas1">
+        <img src="imagenes/mijo.jpg" alt="Imagen de la primera"style="display:block; margin:auto;">
+          <h2>Pasta con salsa de coliflor y pimienta de
+          Jamaica </h2>
+      </section>
+      <section class="receta2">
+        <h2></h2>
+        <img src="imagenes/galletas.jpg" alt="Imagen de la primera delicia"style="display:block; margin:auto;">
+        <p></p>
+      </section>
+      <section class="recetas3">
+          <h2></h2>
+          <img src="imagenes/pasta.jpg" alt="Imagen de la segunda delicia" >
+          <p></p>
+      </section>
+      <section class="recetas4">
+          <h2></h2>
+          <img src="imagenes/barritas.jpg" alt="Imagen de la segunda delicia" >
+          <p></p>
+      </section>
+    </aside>
 </body>
 </html>
