--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <li><a href="../contacto/contacto.html">Contacto</a></li>
         <li><a href="../listado/listado.html">Lista de receptes</a></li>
   </ul>
-        <hr/>
+    <hr/>
     <aside class="sobremi">
         <main>
-            <h1>Sobre mi</h1>
+            <h1 class="sobremi">Sobre mi</h1>
             <img src="imagenes/isagil.png" style="display:block; margin:auto;">
             <p>Hola bienvenid@ a mi blog, un espacio donde
                 quiero compartir mis recetas vegetarianas</p>
@@ -35,6 +35,9 @@
         <img src="imagenes/mijo.jpg" alt="Imagen de la primera"style="display:block; margin:auto;">
           <h2>Pasta con salsa de coliflor y pimienta de
           Jamaica</h2>
+          <hr id="hr2">
+          <h1 class="fecha"> 13 marzo, 2019 </h1>
+          <hr id="hr1"/>
       </section>
       <section class="receta2">
         <h2></h2>
