--- a/index.html
+++ b/index.html
@@ -55,5 +55,28 @@
           <p></p>
       </section>
     </aside>
+
+    <section class="footer">
+      <ul>
+        <li>
+          <a href="#">FACEBOOK</a>
+        </li>
+        <li>
+          <a href="#">TWITTER</a>
+        </li>
+        <li>
+          <a href="#">INSTAGRAM</a>
+        </li>
+        <li>
+          <a href="#">PINTEREST</a>
+        </li>
+        <li>
+          <a href="#">EMAIL</a>
+        </li>
+        <li>
+          <a href="#">RSS</a>
+        </li>
+      </ul>
+    </section>
 </body>
 </html>
