--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
     </aside>
 
-    <section class="footer">
+    <section class="footer" style="position: absolute;">
       <ul>
         <li>
           <a href="#">FACEBOOK</a>
