--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </section>
       <section class="recetas3">
           <h2></h2>
-          <img src="imagenes/pasta.jpg" alt="Imagen de la segunda delicia" >
+          <img src="imagenes/Pasta.jpg" alt="Imagen de la segunda delicia" >
           <p></p>
       </section>
       <section class="recetas4">
