--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="sobremi">Sobre mi</h1>
             <img src="imagenes/isagil.png" style="display:block; margin:auto;">
             <p>Hola bienvenid@ a mi blog, un espacio donde
-                quiero compartir mis recetas vegetarianas</p>
+                quiero compartir mis recetas vegetarianas y veganas favoritas...</p>
         </main>
     </aside>
     <aside class="receptes">
@@ -56,7 +56,7 @@
       </section>
     </aside>
 
-    <section class="footer" style="position: absolute;">
+    <section class="footer" >
       <ul>
         <li>
           <a href="#">FACEBOOK</a>
