--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Delicias Kitchen</title>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="stylesheet" href="css/estilo.css">
-    <!--<script src='main.js'></script>-->
 </head>
 <body>
     <header>
@@ -51,7 +51,7 @@
       </section>
       <section class="recetas4">
           <h2></h2>
-          <img src="imagenes/barritas.jpg" alt="Imagen de la segunda delicia" >
+          <img src="imagenes/calabacines.jpg" alt="Imagen de la segunda delicia" >
           <p></p>
       </section>
     </aside>
