--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
     </aside>
 
-    <section class="footer" >
+    <footer class="footer" >
       <ul>
         <li>
           <a href="#">FACEBOOK</a>
@@ -77,6 +77,6 @@
           <a href="#">RSS</a>
         </li>
       </ul>
-    </section>
+    </footer>
 </body>
 </html>
