--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </section>
     </aside>
 
-    <footer class="footer" >
+    <footer>
       <ul>
         <li>
           <a href="#">FACEBOOK</a>
