--- a/receta/receta.html
+++ b/receta/receta.html
@@ -1,1 +1,34 @@
-<h1>En Construcció</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Delicias Kitchen</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="../css/estilo.css">
+</head>
+<body>
+    <header>
+        <img src="../imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
+
+    </header>
+    <hr>
+        <ul class="menu">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="#">Sobre mi</a></li>
+            <li><a href="../receta/receta.html">Recetas</a></li>
+            <li><a href="../contacto/contacto.html">Contacto</a></li>
+            <li><a href="../listado/listado.html">Lista de receptes</a></li>
+        </ul>
+    <hr/>
+    <aside class="sobremi">
+        <main>
+            <h1 class="sobremi">Sobre mi</h1>
+            <img src="../imagenes/isagil.png" style="display:block; margin:auto;">
+            <p>Hola bienvenid@ a mi blog, un espacio donde
+                quiero compartir mis recetas vegetarianas y veganas favoritas...</p>
+        </main>
+    </aside>
+
+    <h1 style="text-align: center; font-size: 30px;">En Construcció</h1>
+</body>
