--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
-<body>
+<body style="height: 100%;">
     <header>
         <img src="imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
 
@@ -54,29 +54,30 @@
           <img src="imagenes/calabacines.jpg" alt="Imagen de la segunda delicia" >
           <p></p>
       </section>
-    </aside>
-
-    <footer>
-      <ul>
-        <li>
-          <a href="#">FACEBOOK</a>
-        </li>
-        <li>
-          <a href="#">TWITTER</a>
-        </li>
-        <li>
-          <a href="#">INSTAGRAM</a>
-        </li>
-        <li>
-          <a href="#">PINTEREST</a>
-        </li>
-        <li>
-          <a href="#">EMAIL</a>
-        </li>
-        <li>
-          <a href="#">RSS</a>
-        </li>
-      </ul>
-    </footer>
+    </aside>  
 </body>
+
+<footer style="background-color: black; display: flex; justify-content: center; align-items: center; color: white; padding: 20px 0; position: static; bottom: 0; width: 100%;">
+  <div style="display: flex; justify-content: center;">
+    <p style="margin: 0 20px;">
+      <a href="https://www.facebook.com" style="color: white; text-decoration: none;">FACEBOOK</a>
+    </p>
+    <p style="margin: 0 20px;">
+      <a href="https://www.twitter.com" style="color: white; text-decoration: none;">TWITTER</a>
+    </p>
+    <p style="margin: 0 20px;">
+      <a href="https://www.instagram.com" style="color: white; text-decoration: none;">INSTAGRAM</a>
+    </p>
+    <p style="margin: 0 20px;">
+      <a href="https://www.pinterest.com" style="color: white; text-decoration: none;">PINTEREST</a>
+    </p>
+    <p style="margin: 0 20px;">
+      <a href="mailto:your_email@example.com" style="color: white; text-decoration: none;">EMAIL</a>
+    </p>
+    <p style="margin: 0 20px;">
+      <a href="#" style="color: white; text-decoration: none;">RSS</a>
+    </p>
+  </div>
+</footer>
+
 </html>
