--- a/receta/receta.html
+++ b/receta/receta.html
@@ -32,3 +32,26 @@
 
     <h1 style="text-align: center; font-size: 30px;">En Construcció</h1>
 </body>
+
+<footer style="background-color: black; display: flex; justify-content: center; align-items: center; color: white; padding: 20px 0; position: static; bottom: 0; width: 100%;">
+    <div style="display: flex; justify-content: center;">
+      <p style="margin: 0 20px;">
+        <a href="https://www.facebook.com" style="color: white; text-decoration: none;">FACEBOOK</a>
+      </p>
+      <p style="margin: 0 20px;">
+        <a href="https://www.twitter.com" style="color: white; text-decoration: none;">TWITTER</a>
+      </p>
+      <p style="margin: 0 20px;">
+        <a href="https://www.instagram.com" style="color: white; text-decoration: none;">INSTAGRAM</a>
+      </p>
+      <p style="margin: 0 20px;">
+        <a href="https://www.pinterest.com" style="color: white; text-decoration: none;">PINTEREST</a>
+      </p>
+      <p style="margin: 0 20px;">
+        <a href="mailto:your_email@example.com" style="color: white; text-decoration: none;">EMAIL</a>
+      </p>
+      <p style="margin: 0 20px;">
+        <a href="#" style="color: white; text-decoration: none;">RSS</a>
+      </p>
+    </div>
+  </footer>
