--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
     <aside class="receptes">
       <section class="recetas1">
         <img src="imagenes/mijo.jpg" alt="Imagen de la primera"style="display:block; margin:auto;">
-          <h2>Pasta con salsa de coliflor y pimienta de
-          Jamaica</h2>
+          <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Pasta con salsa de colifor y pimienta de Jamaica</a></h2>
           <hr id="hr2">
           <h1 class="fecha"> 13 marzo, 2019 </h1>
           <hr id="hr1"/>
       </section>
       <section class="receta2">
-        <h2></h2>
         <img src="imagenes/galletas.jpg" alt="Imagen de la primera delicia"style="display:block; margin:auto;">
-        <p></p>
+        <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Pasta con salsa de colifor y pimienta de Jamaica</a></h2>
+        <hr id="hr2">
+          <h1 class="fecha"> 13 marzo, 2019 </h1>
+          <hr id="hr1"/>
       </section>
       <section class="recetas3">
           <h2></h2>
