--- a/index.html
+++ b/index.html
@@ -32,28 +32,36 @@
     </aside>
     <aside class="receptes">
       <section class="recetas1">
-        <img src="imagenes/mijo.jpg" alt="Imagen de la primera"style="display:block; margin:auto;">
+        <img src="imagenes/Pasta.jpg" alt="Imagen de la primera"style="display:block; margin:auto;">
           <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Pasta con salsa de colifor y pimienta de Jamaica</a></h2>
-          <hr id="hr2">
-          <h1 class="fecha"> 13 marzo, 2019 </h1>
+          <hr id="hr1">
+          <h1 class="fecha">13 marzo, 2019</h1>
           <hr id="hr1"/>
+          <h1 style="text-align: justify; font-size: 15px;">Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Estaelaborada con coliflor y con otros ingredientes vegetales que la convierten en...</h1>
       </section>
       <section class="receta2">
         <img src="imagenes/galletas.jpg" alt="Imagen de la primera delicia"style="display:block; margin:auto;">
-        <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Pasta con salsa de colifor y pimienta de Jamaica</a></h2>
+        <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Galletas de avena, rosa y lima</a></h2>
         <hr id="hr2">
-          <h1 class="fecha"> 13 marzo, 2019 </h1>
-          <hr id="hr1"/>
+          <h1 class="fecha">12 febrero, 2019</h1>
+          <hr id="hr2"/>
+          <h1 style="text-align: justify; font-size: 15px;">Galletitas para San valentin? Estas galletas ricas y crujientes, elaboradas con avena y con un rico sabor a rosa y lima son perfectas para celebrarlo?</h1>
       </section>
       <section class="recetas3">
-          <h2></h2>
-          <img src="imagenes/Pasta.jpg" alt="Imagen de la segunda delicia" >
-          <p></p>
+          <img src="imagenes/mijo.jpg" alt="Imagen de la segunda delicia" >
+          <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Mijo cremoso con lentejas, hortalizas y shiitake</a></h2>
+          <hr id="hr3">
+            <h1 class="fecha">1 febrero, 2019</h1>
+            <hr id="hr3"/>
+            <h1 style="text-align: justify; font-size: 15px;">Un buen plato de mijo cremoso con lentejas y hortalizas es todo lo que necesitas para templar el cuerpo este invierno! Delicioso y fácil!</h1>
       </section>
       <section class="recetas4">
-          <h2></h2>
           <img src="imagenes/calabacines.jpg" alt="Imagen de la segunda delicia" >
-          <p></p>
+          <h2><a href="http://ejemplo.com" style="color: rgb(0, 0, 0); text-decoration: none;">Calabacines rellenos de arroz negro y calabaza</a></h2>
+          <hr id="hr3">
+            <h1 class="fecha">18 diciembre, 2018</h1>
+            <hr id="hr3"/>
+            <h1 style="text-align: justify; font-size: 15px;">Estos calabacines rellenos de arroz negro y calabaza que te propongo hoy, son la última receta que publico en el blog en...</h1>
       </section>
     </aside>  
 </body>
