--- a/listado/listado.html
+++ b/listado/listado.html
@@ -1,35 +1,61 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Delicias Kitchen</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="../css/estilo.css">
-</head>
-<body>
-    <header>
-        <img src="../imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
 
-    </header>
-    <hr>
-        <ul class="menu">
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="#">Sobre mi</a></li>
-            <li><a href="../receta/receta.html">Recetas</a></li>
-            <li><a href="../contacto/contacto.html">Contacto</a></li>
-            <li><a href="../listado/listado.html">Lista de receptes</a></li>
-        </ul>
-    <hr/>
-    <aside class="sobremi">
-        <main>
-            <h1 class="sobremi">Sobre mi</h1>
-            <img src="../imagenes/isagil.png" style="display:block; margin:auto;">
-            <p>Hola bienvenid@ a mi blog, un espacio donde
-                quiero compartir mis recetas vegetarianas y veganas favoritas...</p>
-        </main>
-    </aside>
+    <head>
+        <meta charset='utf-8'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <title>Delicias Kitchen</title>
+        <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+        <link rel="stylesheet" href="../css/estilo.css">
+    </head>
+    <body style="height: 100%;">
 
-    <h1 style="text-align: center; font-size: 30px;">En Construcció</h1>
-</body>
+        <header>
+            <img src="../imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
+            <nav>
+              <hr id="hrn">
+              <ul class="menu">
+                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="#">SOBRE MI</a></li>
+                <li><a href="../receta/receta.html">RECETAS</a></li>
+                <li><a href="../contacto/contacto.html">CONTACTO</a></li>
+                <li><a href="../listado/listado.html">LLISTA DE RECEPTES</a></li>
+              </ul>
+              <hr id="hrn">
+            <nav/>
+        </header>
+  
+        <aside class="sobremi">
+          <h1 class="sobremi">Sobre mi</h1>
+          <img src="../imagenes/isagil.png" style="display:block; margin:auto;">
+          <p>Hola bienvenid@ a mi blog, un espacio donde
+              quiero compartir mis recetas vegetarianas y veganas favoritas...</p>
+        </aside>
 
+        <h1 style="text-align: center; font-size: 30px;">En Construcción</h1>
+
+        <footer style="position: fixed;">
+            <div style="display: flex; justify-content: center;">
+              <p style="margin: 0 20px;">
+                <a href="https://www.facebook.com" style="color: white; text-decoration: none;">FACEBOOK</a>
+              </p>
+              <p style="margin: 0 20px;">
+                <a href="https://www.twitter.com" style="color: white; text-decoration: none;">TWITTER</a>
+              </p>
+              <p style="margin: 0 20px;">
+                <a href="https://www.instagram.com" style="color: white; text-decoration: none;">INSTAGRAM</a>
+              </p>
+              <p style="margin: 0 20px;">
+                <a href="https://www.pinterest.com" style="color: white; text-decoration: none;">PINTEREST</a>
+              </p>
+              <p style="margin: 0 20px;">
+                <a href="mailto:your_email@example.com" style="color: white; text-decoration: none;">EMAIL</a>
+              </p>
+              <p style="margin: 0 20px;">
+                <a href="#" style="color: white; text-decoration: none;">RSS</a>
+              </p>
+            </div>
+          </footer>
+    
+    </body>
+</html>
