--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="receta1">
             <img id="foto" src="imagenes/Pasta.jpg" alt="Imagen de la primera">
             <h2>
-              <a id="titulo1">
+              <a href="http://ejemplo.com" id="titulo1">
                 Pasta con salsa de colifor y pimienta de Jamaica
               </a>
             </h2>
@@ -54,7 +54,7 @@
           <div class="receta2">
             <img id="foto" src="imagenes/galletas.jpg" alt="Imagen de la primera delicia"style="display:block; margin:auto;">
             <h2>
-              <a  id="titulo2">
+              <a href="http://ejemplo.com" id="titulo2">
                 Galletas de avena, rosa y lima
               </a>
             </h2>
@@ -70,7 +70,7 @@
           <div class="receta3">
             <img id="foto" src="imagenes/mijo.jpg" alt="Imagen de la segunda delicia" >
             <h2>
-              <a  id="titulo3">
+              <a href="http://ejemplo.com" id="titulo3">
                 Mijo cremoso con lentejas, hortalizas y shiitake
               </a>
             </h2>
@@ -86,7 +86,7 @@
           <div class="receta4">
             <img id="foto" src="imagenes/calabacines.jpg" alt="Imagen de la segunda delicia" >
             <h2>
-              <a  id="titulo4">
+              <a href="http://ejemplo.com" id="titulo4">
                 Calabacines rellenos de arroz negro y calabaza
               </a>
             </h2>
@@ -99,7 +99,9 @@
             </h1>
           </div>
 
+  
       </main>   
+
       <footer>
         <div style="display: flex; justify-content: center;">
           <p style="margin: 0 20px;">
