anuncio de prueba

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
           </div>
 
   
-      </main>   
+      </main>
+      <div class="anuncio">
+        <p>Anuncio de ejemplo</p>
+        <a href="https://www.ejemplo.com">Visita nuestro sitio web</a>
+      </div>   
 
       <footer>
         <div style="display: flex; justify-content: center;">
