--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Delicias Kitchen</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel='stylesheet' type='text/css' media='screen' href='/css/estilo.css'>
 </head>
 
 <body>
