--- a/receta/listado/listado.html
+++ b/receta/listado/listado.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Delicias Kitchen</title>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/estilo.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/listado/listado.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/receta/listado/listado.css'>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     <div id="wrapper-div">
 
         <div id="logo-div">
-            <img src="imagenes/delicias.png" alt="Logo">
+            <img src="/imagenes/delicias.png" alt="Logo">
         </div>
 
         <div id="nav-div">
@@ -22,11 +22,10 @@
 
             <ul id="opciones">
 
-                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="/index.html">INICI</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="../receta/receta.html">RECETAS</a></li>
-                <li><a href="../contacto/contacto.html">CONTACTO</a></li>
-                <li><a href="../listado/listado.html">LLISTA DE RECEPTES</a></li>
+                <li><a href="/formulario/form.html">CONTACTE</a></li>
+                <li><a href="listado.html">LLISTA DE RECEPTES</a></li>
 
             </ul>
 
@@ -39,7 +38,7 @@
             <div id="sidebar-div">
                 <h1 id="sobremi">Sobre mi</h1>
 
-                <img id="imagen-main" src="imagenes/isagil.png">
+                <img id="imagen-main" src="/imagenes/isagil.png">
 
                 <p>
                     Hola bienvenid@ a mi blog, un espacio donde quiero compartir mis recetas vegetarianas y veganas favoritas...
@@ -50,7 +49,7 @@
                         Suscríbete a mi blog
                     </h1>
 
-                    <img id="imagen-anuncio" src="imagenes/libro.png">
+                    <img id="imagen-anuncio" src="/imagenes/libro.png">
 
                     <h2>
                         Y consigue GRATIS mi eBook con 10 recetas exclusivas con superalimentos.
@@ -75,10 +74,11 @@
                     <hr id="separador">
 
                     <h2>MILHOJAS DE CALABACÍN, PIMIENTO ROJO Y ANCHOAS</h2>
-                    <img id="imagenre" src="/listado/fotos/milhojas.webp">
+                    <img id="imagenre" src="fotos/milhojas.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
+                        <a href="../"
                     </div>
                     <hr id="separador">
                 </div>
@@ -86,7 +86,7 @@
                     <hr id="separador">
 
                     <h2>HUEVOS REVUELTOS CON JUDÍAS VERDES Y QUESO FETA</h2>                    
-                    <img id="imagenre" src="/listado/fotos/huevos-revueltos-judias-verdes-queso-feta-t.jpg.webp">
+                    <img id="imagenre" src="fotos/huevos-revueltos-judias-verdes-queso-feta-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -97,7 +97,7 @@
                     <hr id="separador">
 
                     <h2>BOCADILLOS 'CAPRESE'</h2>                    
-                    <img id="imagenre" src="/listado/fotos/bocadillito-caprese-t.jpg.webp">
+                    <img id="imagenre" src="fotos/bocadillito-caprese-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -108,7 +108,7 @@
                     <hr id="separador">
 
                     <h2>ENSALADA DE PASTA CON PAVO Y AGUACATE</h2>                    
-                    <img id="imagenre" src="/listado/fotos/ensalada-pasta-pavo-aguacate-t.jpg.webp">
+                    <img id="imagenre" src="fotos/ensalada-pasta-pavo-aguacate-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -119,7 +119,7 @@
                     <hr id="separador">
 
                     <h2>'WRAPS' DE ATÚN, AGUACATE Y TOMATE</h2>                    
-                    <img id="imagenre" src="/listado/fotos/wrap-atun-t.jpg.webp">
+                    <img id="imagenre" src="fotos/wrap-atun-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 10mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -130,7 +130,7 @@
                     <hr id="separador">
 
                     <h2>TOMATE RELLENO DE 'MOZZARELLA' Y PEPINO</h2>                    
-                    <img id="imagenre" src="/listado/fotos/tomate-t.jpg.webp">
+                    <img id="imagenre" src="fotos/tomate-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 10mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -141,7 +141,7 @@
                     <hr id="separador">
 
                     <h2>ENSALADA DE LENTEJAS CON TOMATE Y AGUACATE</h2>                    
-                    <img id="imagenre" src="/listado/fotos/ensalada-lentejas-t.jpg.webp">
+                    <img id="imagenre" src="fotos/ensalada-lentejas-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -152,7 +152,7 @@
                     <hr id="separador">
 
                     <h2>REVUELTO DE TOFU AHUMADO</h2>                    
-                    <img id="imagenre" src="/listado/fotos/revuelto-tofu-t.jpg.webp">
+                    <img id="imagenre" src="fotos/revuelto-tofu-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -163,7 +163,7 @@
                     <hr id="separador">
 
                     <h2>PISTO AL DENTE CON JAMÓN SERRANO</h2>                    
-                    <img id="imagenre" src="/listado/fotos/pisto-age-t.jpg.webp">
+                    <img id="imagenre" src="fotos/pisto-age-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -174,7 +174,7 @@
                     <hr id="separador">
 
                     <h2>ENSALADA DE VIEIRAS, CANÓNIGOS Y POMELO</h2>                    
-                    <img id="imagenre" src="/listado/fotos/vieiras-pomelo-t.jpg.webp">
+                    <img id="imagenre" src="fotos/vieiras-pomelo-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -185,7 +185,7 @@
                     <hr id="separador">
 
                     <h2>'PENNE' CON POLLO Y CHAMPIÑÓN A LA ALBAHACA</h2>                    
-                    <img id="imagenre" src="/listado/fotos/penne-adobe-t.jpg.webp">
+                    <img id="imagenre" src="fotos/penne-adobe-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -196,7 +196,7 @@
                     <hr id="separador">
 
                     <h2>BROCHETAS DE SALMÓN SOBRE ENSALADA DE 'NOODLES'</h2>                    
-                    <img id="imagenre" src="/listado/fotos/brochetas-salmon-age-t.jpg.webp">
+                    <img id="imagenre" src="fotos/brochetas-salmon-age-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -207,7 +207,7 @@
                     <hr id="separador">
 
                     <h2>'SMOOTHIE BOWL' DE TOMATE Y FRAMBUESA</h2>                    
-                    <img id="imagenre" src="/listado/fotos/bol-smoothie-tomate-pinones-fresas-t.jpg.webp">
+                    <img id="imagenre" src="fotos/bol-smoothie-tomate-pinones-fresas-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -218,7 +218,7 @@
                     <hr id="separador">
 
                     <h2>PIÑA BRASEADA CON SIROPE DE LIMA</h2>                    
-                    <img id="imagenre" src="/listado/fotos/pina-t.jpg.webp">
+                    <img id="imagenre" src="fotos/pina-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
                         <h3>Dificultad: Facil</h3>
@@ -229,7 +229,7 @@
                     <hr id="separador">
 
                     <h2>CHAPATA DE LOMO DE CERDO Y CALABACÍN A LA BRASA</h2>                    
-                    <img id="imagenre" src="/listado/fotos/chapata-lomo-calabacin-t.jpg.webp">
+                    <img id="imagenre" src="fotos/chapata-lomo-calabacin-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 10mins</h3>
                         <h3>Dificultad: Facil</h3>
