--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Delicias Kitchen</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='estilo.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/estilo.css'>
 </head>
 
 <body>
@@ -21,11 +21,10 @@
 
             <ul id="opciones">
 
-                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="../index.html">INICI</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="../receta/receta.html">RECETAS</a></li>
-                <li><a href="../formulario/form.html">CONTACTO</a></li>
-                <li><a href="../listado/listado.html">LLISTA DE RECEPTES</a></li>
+                <li><a href="../formulario/form.html">CONTACTE</a></li>
+                <li><a href="/receta/listado/listado.html">LLISTA DE RECEPTES</a></li>
 
             </ul>
 
