--- a/listado/receta/html/receta2.html
+++ b/listado/receta/html/receta2.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Delicias Kitchen</title>
     <link rel='stylesheet' type='text/css' media='screen' href='/css/estilo.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/listado/listado.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/listado/receta/css/receta.css'>
 </head>
 
 <body>
