--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -6,20 +6,20 @@
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Delicias Kitchen</title>
         <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-        <link rel="stylesheet" href="../css/estilo.css">
+        <link rel="stylesheet" href="/css/estilo.css">
     </head>
     <body style="height: 100%;">
 
         <header>
-            <img src="../imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
+            <img src="/imagenes/delicias.png" alt="Imagen de deliciosas delicias" style="display:block; margin:auto;">
             <nav>
               <hr id="hrn">
               <ul class="menu">
-                <li><a href="../index.html">INICIO</a></li>
+                <li><a href="/index.html">INICIO</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="../receta/receta.html">RECETAS</a></li>
-                <li><a href="../contacto/contacto.html">CONTACTO</a></li>
-                <li><a href="../listado/listado.html">LLISTA DE RECEPTES</a></li>
+
+                <li><a href="/contacto/contacto.html">CONTACTO</a></li>
+                <li><a href="/listado/listado.html">LLISTA DE RECEPTES</a></li>
               </ul>
               <hr id="hrn">
             <nav/>
