--- a/listado/receta/html/receta13.html
+++ b/listado/receta/html/receta13.html
@@ -24,7 +24,7 @@
 
                 <li><a href="/index.html">INICIO</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="/contacto/contacto.html">CONTACTO</a></li>
+                <li><a href="/formulario/form.html">CONTACTO</a></li>
                 <li><a href="/listado/listado.html">LLISTA DE RECEPTES</a></li>
 
             </ul>
