--- a/formulario/form.html
+++ b/formulario/form.html
@@ -43,7 +43,7 @@
                 <div class="contact-izquierda">
                     <h3>Envia el teu missatge</h3>
 
-                    <form>
+                    <form method="get" action="processament.py">
                         <div class="input-fila">
 
                             <div class="input-grupo">
