--- a/listado/listado.html
+++ b/listado/listado.html
@@ -22,9 +22,9 @@
 
             <ul id="opciones">
 
-                <li><a href="/index.html">INICIO</a></li>
+                <li><a href="/index.html">INICI</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="/formulario/form.html">CONTACTO</a></li>
+                <li><a href="/formulario/form.html">CONTACTE</a></li>
                 <li><a href="/listado/listado.html">LLISTA DE RECEPTES</a></li>
 
             </ul>
@@ -67,13 +67,12 @@
 
 
             <section id="listarecetas">
-                <h1>LISTA DE RECETAS</h1>
-
+                <h1 id="titulo">LISTA DE RECETAS</h1>
 
                 <div id="receta">
                     <hr id="separador">
 
-                    <h2><a href="/listado/receta/html/receta1.html">DE CALABACÍN, PIMIENTO ROJO Y ANCHOAS</a></h2>
+                    <h2><a href="/listado/receta/html/receta1.html">MILOJAS DE CALABACÍN, PIMIENTO ROJO Y ANCHOAS</a></h2>
                     <img id="imagenre" src="/listado/fotos/milhojas.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
@@ -106,7 +105,7 @@
                 <div id="receta">
                     <hr id="separador">
 
-                    <h2><a href="/listado/receta/html/recet4.html">DE PASTA CON PAVO Y AGUACATE</a></h2>                    
+                    <h2><a href="/listado/receta/html/receta4.html">ENSALADA DE PASTA CON PAVO Y AGUACATE</a></h2>                    
                     <img id="imagenre" src="/listado/fotos/ensalada-pasta-pavo-aguacate-t.jpg.webp">
                     <div id="contenido">
                         <h3>Tiempo de preparación: 15mins</h3>
