--- a/listado/receta/html/receta3.html
+++ b/listado/receta/html/receta3.html
@@ -22,9 +22,9 @@
 
             <ul id="opciones">
 
-                <li><a href="/index.html">INICIO</a></li>
+                <li><a href="/index.html">INICI</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="/formulario/form.html">CONTACTO</a></li>
+                <li><a href="/formulario/form.html">CONTACTE</a></li>
                 <li><a href="/listado/listado.html">LLISTA DE RECEPTES</a></li>
 
             </ul>
