--- a/listado/receta/html/receta1.html
+++ b/listado/receta/html/receta1.html
@@ -98,18 +98,18 @@
                 </div>
                 <hr>
                 <div id="prep">
-                    <h2>1.</h2>
-                    <h3>Lavamos, secamos y cortamos en láminas cuadradas el calabacín.</h3>
-                    <h2>2.</h2>
-                    <h3>Las salpimentamos y las cocinamos a la plancha en una sartén con un poco de aceite.</h3>
-                    <h2>3.</h2>
-                    <h3>Sacamos los pimientos del bote, los escurrimos y los cortamos también cuadrado.</h3>
-                    <h2>4.</h2>
-                    <h3>Mezclamos un poco de aceite con orégano para aliñar al final.</h3>
-                    <h2>5.</h2>
-                    <h3>Montamos los milhojas intercalando cuadrados de calabacín, pimiento morrón y anchoas.</h3>
-                    <h2>6.</h2>
-                    <h3>Servimos y aderezamos con un poco de aceite de orégano.</h3>
+                    <h2>1. Lavamos, secamos y cortamos en láminas cuadradas el calabacín.</h2>
+                    <h3></h3>
+                    <h2>2. Las salpimentamos y las cocinamos a la plancha en una sartén con un poco de aceite.</h2>
+                    <h3></h3>
+                    <h2>3. Sacamos los pimientos del bote, los escurrimos y los cortamos también cuadrado.</h2>
+                    <h3></h3>
+                    <h2>4. Mezclamos un poco de aceite con orégano para aliñar al final.</h2>
+                    <h3></h3>
+                    <h2>5. Montamos los milhojas intercalando cuadrados de calabacín, pimiento morrón y anchoas.</h2>
+                    <h3></h3>
+                    <h2>6. Servimos y aderezamos con un poco de aceite de orégano.</h2>
+                    <h3></h3>
                 </div>
 
 
