--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
             <ul id="opciones">
 
-                <li><a href="../index.html">INICI</a></li>
+                <li><a href="./index.html">INICI</a></li>
                 <li><a href="#">SOBRE MI</a></li>
-                <li><a href="/formulario/form.html">CONTACTE</a></li>
-                <li><a href="/listado/listado.xml">LLISTA DE RECEPTES</a></li>
+                <li><a href="./formulario/form.html">CONTACTE</a></li>
+                <li><a href="./listado/listado.xml">LLISTA DE RECEPTES</a></li>
 
             </ul>
 
